// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthMovement component Matches the snapshot 1 1`] = `
<div
  className="MonthMovement"
>
  <div
    className="MonthMovement__name"
  >
    Name
  </div>
  <div
    className="MonthMovement__amount"
  >
    <span
      className="MonthMovement__amount-expense"
    >
      -
      50
       €
    </span>
  </div>
  <div
    className="MonthMovement__actions"
  >
    <i
      className="action-icon icon--pencil"
      onClick={[Function]}
    />
    <i
      className="action-icon icon--checkbox-unchecked"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`MonthMovement component Matches the snapshot 2 1`] = `
<div
  className="MonthMovement"
>
  <div
    className="MonthMovement__name"
  >
    Name
  </div>
  <div
    className="MonthMovement__amount"
  >
    <span
      className="MonthMovement__amount-income"
    >
      +
      50
       €
    </span>
  </div>
  <div
    className="MonthMovement__paid"
  >
    PAGADO
  </div>
  <div
    className="MonthMovement__actions"
  >
    <i
      className="action-icon icon--checkbox-checked"
      onClick={[Function]}
    />
  </div>
</div>
`;
